--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,7 @@
             'bower/datatables-bootstrap3-plugin/media/css/datatables-bootstrap3.css'
             %}
             <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
-            <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css' />
             {% endstylesheets %}
         {% endblock %}
         {# favicon #}
