--- a/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
@@ -12,16 +12,16 @@
                 <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                     <tr>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i> Fecha</th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i> Mago</th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i> Asunto</th>
+                        <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i> <span class="hidden-xs">Fecha</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i> <span class="hidden-xs">Mago</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i> <span class="hidden-xs">Asunto</span></th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for i in 1..5 %}
                         <tr>
                             <td class="text-center">{{ random(1000000) }}</td>
-                            <td class="text-center">Nombre de Mago</td>
+                            <td class="text-center"><a href="{{ path('archmage_game_account_profile') }}">Nombre del Mago</a></td>
                             <td class="text-center">Asunto</td>
                         </tr>
                     {% endfor %}
