--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -12,12 +12,12 @@
                 <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
-                            <th class="text-right"><i class="fa fa-fw fa-lg fa-list-ol"></i> Posición</th>
-                            <th class="text-right"><i class="fa fa-fw fa-lg fa-list-ol"></i> Poder</th>
-                            <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i> Nick</th>
-                            <th class="text-center"><i class="fa fa-fw fa-lg fa-list-ol"></i> Facción</th>
-                            <th class="text-right"><i class="fa fa-fw fa-lg fa-globe"></i> Tierras</th>
-                            <th class="text-right"><i class="fa fa-fw fa-lg fa-home"></i> Fortalezas</th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-list-ol"></i> <span class="hidden-xs">Posición</span></th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-rocket"></i> <span class="hidden-xs">Poder</span></th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i> <span class="hidden-xs">Nick</span></th>
+                            <th class="text-center hidden-xs"><i class="fa fa-fw fa-lg fa-rebel"></i> <span class="hidden-xs">Facción</span></th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-globe"></i> <span class="hidden-xs">Tierras</span></th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-shield"></i> <span class="hidden-xs">Fortalezas</span></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -25,11 +25,11 @@
                         {% for i in 1..200 %}
                         <tr>
                             <td class="text-right">{{ random(1000) }}</td>
-                            <td class="text-right">{{ random(1000) }}</td>
-                            <td class="text-center">Nombre del Mago</td>
-                            <td class="text-center"><img class="image-thumbnail custom-icon" src="{{ asset('bundles/archmagegame/images/faction/' ~ faction[random(4)]) }}"> {{ faction[random(4)]|capitalize }}</td>
-                            <td class="text-right">{{ random(1000) }}</td>
-                            <td class="text-right">{{ random(1000) }}</td>
+                            <td class="text-right">{{ random(10000000) }}</td>
+                            <td class="text-center"><a href="{{ path('archmage_game_account_profile') }}">Nombre del Mago</a></td>
+                            <td class="text-center hidden-xs">Facción</td>
+                            <td class="text-right">{{ random(5000) }}</td>
+                            <td class="text-right">{{ random(100) }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
