--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -8,7 +8,7 @@
             <div class="col-xs-12">
                 <div class="page-header text-center">
                     <a name="goal"></a>
-                    <h1><i class="fa fa-fw fa-info-circle"></i> Objetivo</h1>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Introducción</h1>
                 </div>
             </div>
             <div class="col-xs-12">
@@ -17,186 +17,23 @@
                     <h1><i class="fa fa-fw fa-info-circle"></i> Facciones</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-offset-5 col-xs-2">
-                    <div class="panel panel-info">
-                        <div class="panel-heading text-center hidden-xs hidden-sm">Fantasmal</div>
+            {% for faction in factions %}
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-{{ faction.class }}">
+                        <div class="panel-heading text-center">{{ faction.name }}</div>
                         <div class="panel-body">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2 col-xs-offset-3">
-                <div class="panel panel-warning">
-                    <div class="panel-heading text-center hidden-xs hidden-sm">Oscuridad</div>
-                    <div class="panel-body">
-                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-offset-2 col-xs-2">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center hidden-xs hidden-sm">Sagrado</div>
-                    <div class="panel-body">
-                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-offset-4 col-xs-2">
-                <div class="panel panel-danger">
-                    <div class="panel-heading text-center hidden-xs hidden-sm">Destrucción</div>
-                    <div class="panel-body">
-                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <div class="panel panel-success">
-                    <div class="panel-heading text-center hidden-xs hidden-sm">Natural</div>
-                    <div class="panel-body">
-                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12">
-                <div class="page-header text-center">
-                    <a name="buildings"></a>
-                    <h1><i class="fa fa-fw fa-info-circle"></i> Edificios</h1>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Tierras</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/land.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
+                                </div>
+                                <div class="col-xs-8">
+                                    <p>{{ faction.description }}</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Pueblos</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/village.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Granjas</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/farm.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Nodos</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/node.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Gremios</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/guild.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Talleres</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/workshop.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Fortalezas</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/fortress.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Barreras</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/barrier.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-                                <p>Texto descriptivo</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12">
-                <div class="page-header text-center">
-                    <a name="units"></a>
-                    <h1><i class="fa fa-fw fa-info-circle"></i> Unidades</h1>
-                </div>
-            </div>
-            <div class="col-xs-12">
-                <div class="page-header text-center">
-                    <a name="spells"></a>
-                    <h1><i class="fa fa-fw fa-info-circle"></i> Hechizos</h1>
-                </div>
-            </div>
+            {% endfor %}
             <div class="col-xs-12">
                 <div class="page-header text-center">
                     <a name="auctions"></a>
@@ -209,6 +46,88 @@
                     <h1><i class="fa fa-fw fa-info-circle"></i> Batallas</h1>
                 </div>
             </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="buildings"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Edificios</h1>
+                </div>
+            </div>
+            {% for building in buildings %}
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">{{ building.name }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img class="custom-thumbnail" src="{{ asset( building.image ) }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <p>{{ building.description }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="units"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Unidades</h1>
+                </div>
+            </div>
+            {% for unit in units %}
+            <a name="{{ unit.name }}"></a>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-{{ unit.faction.class }}">
+                    <div class="panel-heading text-center">{{ unit.name }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
+                            </div>
+                            <div class="col-xs-8 text-padded">
+                                <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ unit.attack|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
+                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</a></div>
+                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</a></div>
+                                <div class="col-xs-12"><a href="#"><i class="fa fa-fw fa-joomla"></i>Habilidad</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="spells"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Hechizos</h1>
+                </div>
+            </div>
+            {% for spell in spells %}
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-{{ spell.faction.class }}">
+                        <div class="panel-heading text-center">{{ spell.name }}</div>
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="custom-thumbnail" src="{{ asset( spell.image ) }}">
+                                </div>
+                                <div class="col-xs-8 text-padded">
+                                    <div class="col-xs-4">{{ spell.manaCost|nf }}<i class="fa fa-fw fa-tint"></i></div>
+                                    <div class="col-xs-4">{{ spell.unitCount|nf }}<i class="fa fa-fw fa-users"></i></div>
+                                    <div class="col-xs-4">{{ spell.level }}<i class="fa fa-fw fa-magic"></i></div>
+                                    <div class="col-xs-4">{{ spell.turnCost|nf }}<i class="fa fa-fw fa-hourglass-half"></i></div>
+                                    <div class="col-xs-4">{{ spell.turnResearch|nf }}<i class="fa fa-fw fa-hourglass"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
