Nuevas entidades y relaciones. Nuevas imagenes.

--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -118,8 +118,8 @@
                                 </div>
                                 <div class="col-xs-8 text-padded">
                                     <div class="col-xs-4">{{ spell.manaCost|nf }}<i class="fa fa-fw fa-tint"></i></div>
-                                    <div class="col-xs-4">{{ spell.unitCount|nf }}<i class="fa fa-fw fa-users"></i></div>
-                                    <div class="col-xs-4">{{ spell.level }}<i class="fa fa-fw fa-magic"></i></div>
+                                    <div class="col-xs-4">{{ spell.skill.quantity|nf }}<i class="fa fa-fw fa-users"></i></div>
+                                    <div class="col-xs-4">{{ spell.magic }}<i class="fa fa-fw fa-magic"></i></div>
                                     <div class="col-xs-4">{{ spell.turnCost|nf }}<i class="fa fa-fw fa-hourglass-half"></i></div>
                                     <div class="col-xs-4">{{ spell.turnResearch|nf }}<i class="fa fa-fw fa-hourglass"></i></div>
                                 </div>
