--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -30,8 +30,9 @@ img.background {
 .panel-body {
     padding: 0;
 }
-.panel-body p {
+.panel-body p, .text-padded {
     padding-top: 8px;
+    padding-right: 8px;
 }
 img.custom-thumbnail {
     max-width: 100%;
@@ -160,7 +161,4 @@ div.dataTables_paginate, div.dataTables_filter {
 .nav > li > a {
     padding-left: 5px;
     padding-right: 5px;
-}
-.text-padded {
-    padding-top: 7px !important;
 }
